# Emergent-Misalignment

./: README.md
em-correctability/: README.md  pyproject.toml  requirements.txt
em-correctability/configs/: default.yaml
em-correctability/emcorr/: __init__.py  config.py  eval.py  interventions.py  models.py  plotting.py  sae.py
em-correctability/scripts/: 01_replicate.py  02_train_sae.py  03_correctability.py
